test/programs/error-def-is-symbol.defs
I_am_a_symbol_not_a_definition